--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.css" />
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+    <header>
+        <div class="logo">GROUP STRENGTH</div>
+        <div class="nav">
+            <ul>
+                <li><a href="">Features</a></li>
+                <li><a href="">Workouts</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </div>
+    </header>
     {{{body}}}
+    <footer>
+        <ul>
+            <li><a href="">Contact</a></li>
+            <li><a href="">FAQ</a></li>
+            <li><a href="">Privacy</a></li>
+            <li><a href="">Terms of Use</a></li>
+        </ul>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="javascripts/main.js"></script>
   </body>
 </html>
