--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -64,23 +64,37 @@ header {
 .features {
   background-color: #f3f3f3;
   display: block;
+  padding: 75px;
 }
 
 .features-item {
-  flex: 1 1 auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  padding: 40px;
+  width: 100%;
+}
+
+.features h2 {
+  font-size: 2.5em;
+  text-align: center;
+  padding: 75px;
 }
 
 .features-item img {
+  display: block;
   border-radius: 50%;
   border-color: lightgray;
   border-style: solid;
   border-width: 7px;
   height: 225px;
   width: 225px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+.vertical-line {
+  display: block;
+  width: 50%;
+  border-right: 3px solid lightgray;
+  height: 100px;
 }
 
 .rtn-container {
