--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,24 +3,31 @@
 <p>{{stuff}}</p> --}}
 <div class="background-pic"></div>
 <div class="features">
+        <h2>FEATURES</h2>
     <div class="features-item">
         <img src="../images/fitbit.jpg" class="cover">
     </div>
+    <div class="vertical-line"></div>
     <div class="features-item">
         <img src="../images/up_arrow.jpg" class="cover">
     </div>
+    <div class="vertical-line"></div>
     <div class="features-item">
         <img src="../images/ex_library.jpeg" class="cover">
     </div>
+    <div class="vertical-line"></div>
     <div class="features-item">
         <img src="../images/group_features.jpg" class="cover">
     </div>
 </div>
 <div class="rtn-container">
-    {{#each routines}}
-    <div class="rtn-thumbnail-item">
+    {{#each rntAll}}
+    <div class="rtn-thumbnail-item" data-search-route="{{routineId}}">
         <img src="{{routinePic}}" class="cover">
         <p>{{routineName}}</p>
     </div>    
     {{/each}}
 </div>
+<script>
+    let allRoutines = {{{rntAllString}}};
+</script>
