established routines page and got post to work on edit page

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -30,6 +30,6 @@
         </ul>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="javascripts/main.js"></script>
+    <script src="/javascripts/main.js"></script>
   </body>
 </html>
