--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,11 +2,10 @@ html, body{
   width:100%;
   height:100%;
   box-sizing: border-box;
-  background-color:eee;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-body, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, textarea, p, blockquote, th, td, hr, button, article, aside, details, figcaption, figure, footer, header, menu, nav, section {
+body, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, textarea, p, blockquote, table, th, tr, td, hr, button, article, aside, details, figcaption, figure, footer, header, menu, nav, section {
   margin: 0;
   padding: 0;
 }
@@ -28,7 +27,7 @@ header {
 .logo {
   width: 400px;
   color: white;
-  font-size: 1.8em;
+  font-size: 1.2em;
   margin-left: 10%;
   font-weight: bolder;
 }
@@ -151,6 +150,68 @@ footer a {
   object-fit: cover;
 }
 
-.routines {
+.routines-container {
+  flex: 1 1 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
   padding: 50px;
 }
+
+.routines-top-lt {
+  width: 50%;
+  color: white;
+  text-align: center;
+  background-color: #24292e;
+  padding: 25px;
+}
+
+.routines-top-rt {
+  width: 50%;
+  color: white;
+  text-align: left;
+  background-color: #24292e;
+  padding: 25px;
+}
+
+.routines-top-lt img {
+  height: 300px;
+  width: 300px;
+}
+
+.routines-exercises {
+  width: 100%;
+  padding: 30px;
+}
+
+.routines-exercises th {
+  font-size: 1.1em;
+}
+
+.routines-exercises tr {
+  font-size: 1.3em;
+}
+
+th, td {
+  padding-top: 15px;
+  padding-right: 50px;
+}
+
+.button-routines {
+  background-color: white;
+  color: black;
+  border-width: 2px;
+  border-style: solid;
+  font-weight: bold;
+  font-size: .9em;
+  padding: 5px;
+}
+
+.routines-edit-container {
+  display: block;
+  padding: 50px;
+}
+
+
+
+
