finished styling for features section

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -34,7 +34,7 @@ header {
 
 .nav {
   width: 400px; 
-  color: white;
+  color: #ebebe6;
   margin-right: 6%;
 }
 
@@ -47,11 +47,12 @@ header {
 .nav a {
   color: white;
   font-size: 1.2em;
+  text-decoration: none;
 }
 
 
 .background-pic {
-  background-image: url("../images/group_training.jpeg");
+  background-image: url("../images/group_training.jpg");
   height: 100%;
   width: 100%;
   background-position: center;
@@ -60,34 +61,50 @@ header {
   background-size: cover;
 }
 
-.features {
+#features {
   background-color: #f3f3f3;
-  display: block;
-  padding: 75px;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  padding: 50px;
+}
+
+#features h2 {
+  font-size: 2.5em;
+  text-align: center;
+  padding-bottom: 50px;
 }
 
 .features-item {
-  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  line-height: 1.6em;
 }
 
-.features h2 {
-  font-size: 2.5em;
+.features-mid {
+  width: 27%;
   text-align: center;
-  padding: 75px;
 }
 
-.features-item img {
-  display: block;
+.features-rt {
+  width: 17%;
+  text-align: left;
+}
+
+.features-lt {
+  width: 17%;
+  text-align: right;
+}
+
+.features-mid img {
   border-radius: 50%;
   border-color: lightgray;
   border-style: solid;
   border-width: 7px;
   height: 225px;
   width: 225px;
-  margin-left: auto;
-  margin-right: auto;
 }
-
 
 .vertical-line {
   display: block;
@@ -96,7 +113,7 @@ header {
   height: 100px;
 }
 
-.rtn-container {
+#rtn-container {
   flex: 1 1 auto;
   display: flex;
   flex-wrap: wrap;
