--- a/views/results.hbs
+++ b/views/results.hbs
@@ -1,5 +1,5 @@
 <h1>Results View!!!</h1>
-{{#each workouts}}
-    <p>{{routineId}} {{date}}</p>    
+{{#each actuals}}
+    <p>{{exerciseId}} {{actualReps}}</p>    
 {{/each}}
     
