--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,11 +10,11 @@
   </head>
   <body>
     <header>
-        <div class="logo">GROUP STRENGTH</div>
+        <div class="logo"><img src="/images/group_strength_logo.png"></div>
         <div class="nav">
             <ul>
-                <li><a href="">Features</a></li>
-                <li><a href="">Workouts</a></li>
+                <li><a href="#features">Features</a></li>
+                <li><a href="#rtn-container">Workouts</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
