--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -113,6 +113,16 @@ header {
   height: 100px;
 }
 
+#rtn-wrapper {
+  background-color: #24292e;
+  color: white;
+}
+
+#rtn-wrapper h2 {
+  padding: 25px;
+  text-align: center;
+}
+
 #rtn-container {
   flex: 1 1 auto;
   display: flex;
@@ -157,6 +167,7 @@ footer a {
   color: white;
   font-size: 1.2em;
   margin: 30px;
+  text-decoration: none;
 }
 
 .center {
