--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,17 @@
 {{!-- <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
 <p>{{stuff}}</p> --}}
+<header>
+    <div class="logo"><img src="/images/group_strength_logo.png"></div>
+    <div class="nav">
+        <ul>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#rtn-container">Workouts</a></li>
+            <li><a href="/results">Log</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </div>
+</header>
 <div class="background-pic"></div>
 <div id="features">
         <h2>FEATURES</h2>
@@ -57,13 +68,16 @@
         </div>
     </div>
 </div>
-<div id="rtn-container">
-    {{#each rntAll}}
-    <div class="rtn-thumbnail-item" data-search-route="{{routineId}}">
-        <img src="{{routinePic}}" class="cover">
-        <p>{{routineName}}</p>
-    </div>    
-    {{/each}}
+<div id="rtn-wrapper">
+    <h2>WORKOUT ROUTINES</h2>
+    <div id="rtn-container">
+        {{#each rntAll}}
+        <div class="rtn-thumbnail-item" data-search-route="{{routineId}}">
+            <img src="{{routinePic}}" class="cover">
+            <p>{{routineName}}</p>
+        </div>    
+        {{/each}}
+    </div>
 </div>
 <script>
     let allRoutines = {{{rntAllString}}};
