--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,7 +9,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <header>
+    {{!-- <header>
         <div class="logo"><img src="/images/group_strength_logo.png"></div>
         <div class="nav">
             <ul>
@@ -19,14 +19,14 @@
                 <li><a href="">Contact</a></li>
             </ul>
         </div>
-    </header>
+    </header> --}}
     {{{body}}}
     <footer>
         <ul>
-            <li><a href="">Contact</a></li>
-            <li><a href="">FAQ</a></li>
-            <li><a href="">Privacy</a></li>
-            <li><a href="">Terms of Use</a></li>
+            <li><a>Contact</a></li>
+            <li><a>FAQ</a></li>
+            <li><a>Privacy</a></li>
+            <li><a>Terms of Use</a></li>
         </ul>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
