--- a/views/results.hbs
+++ b/views/results.hbs
@@ -1,3 +1,14 @@
+<header>
+    <div class="logo"><img src="/images/group_strength_logo.png"></div>
+    <div class="nav">
+        <ul>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#rtn-container">Workouts</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
+    </div>
+</header>
 <h1>Results View!!!</h1>
 {{#each actuals}}
     <p>{{exerciseId}} {{actualReps}}</p>    
