--- a/views/routines.hbs
+++ b/views/routines.hbs
@@ -1,3 +1,14 @@
+<header>
+    <div class="logo"><img src="/images/group_strength_logo.png"></div>
+    <div class="nav">
+        <ul>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#rtn-container">Workouts</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
+    </div>
+</header>
 <div class="routines-container">
     <div class="routines-top-lt">
         <img src="{{rntResults.routinePic}}" class="cover">
