--- a/views/routinesEdit.hbs
+++ b/views/routinesEdit.hbs
@@ -1,9 +1,20 @@
+<header>
+    <div class="logo"><img src="/images/group_strength_logo.png"></div>
+    <div class="nav">
+        <ul>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#rtn-container">Workouts</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
+    </div>
+</header>
 <div class="routines-edit-container">
     <h1>{{rntResults.routineName}}</h1>
     <br><br>
     {{#if rntResults.active}}
         <form action="/routines/{{rntResults.routineId}}/active/edit" method="POST" target="_blank">
-            <input type="checkbox" name="active" value="true" checked="checked">
+            Active: &nbsp;<input type="checkbox" name="active" value="true" checked="checked">
         </form>
     {{else}}
         <form action="/routines/{{rntResults.routineId}}/active/edit" method="POST" target="_blank">
@@ -13,10 +24,10 @@
     <br><br>
     {{#each rntResults.exercises}}
     <form action="/routines/{{../rntResults.routineId}}/{{exerciseId}}/edit" method="POST" target="_blank">
-        <input type="text" name="exercise" value="{{exerciseName}}">
-        <input type="text" name="weight" value="{{weight}}">
-        <input type="text" name="reps" value="{{reps}}">
-        <input type="text" name="sets" value="{{sets}}">
+        Exercise: &nbsp;&nbsp;<input type="text" name="exercise" value="{{exerciseName}}">&nbsp;&nbsp;&nbsp;
+        Weight:  &nbsp;&nbsp;<input type="text" name="weight" value="{{weight}}">&nbsp;&nbsp;&nbsp;
+        Reps:  &nbsp;&nbsp;<input type="text" name="reps" value="{{reps}}">&nbsp;&nbsp;&nbsp;
+        Sets:  &nbsp;&nbsp;<input type="text" name="sets" value="{{sets}}">&nbsp;&nbsp;&nbsp;
         <br><br>
     </form>
     {{/each}}
