added validations to routine edit page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,9 +6,9 @@
     <div class="nav">
         <ul>
             <li><a href="#features">Features</a></li>
-            <li><a href="#rtn-container">Workouts</a></li>
+            <li><a href="#rtn-wrapper">Workouts</a></li>
             <li><a href="/results">Log</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#footer">Contact</a></li>
         </ul>
     </div>
 </header>
@@ -38,7 +38,7 @@
         <div class="features-rt">
             <h3>Report Progress</h3>
             <br>
-            <p>Have the convenience of entering your strength training sessions directly into your fitbit ionic. Your logs are automatically submitted to the cloud after every session.</p>
+            <p>Assess the effectiveness of your routine by using online reporting to track and analyze your performance</p>
         </div>
     </div>
     <div class="vertical-line"></div>
@@ -46,7 +46,7 @@
         <div class="features-lt">
             <h3>Exercise Library</h3>
             <br>
-            <p>Have the convenience of entering your strength training sessions directly into your fitbit ionic. Your logs are automatically submitted to the cloud after every session.</p>
+            <p>The exercise database contains a wide range of exercises from which you can choose when creating a workout. (feature coming soon)</p>
         </div>
         <div class="features-mid">
             <img src="https://cdn-mf0.heartyhosting.com/sites/mensfitness.com/files/styles/exercise_step_image/public/potrait-step-imagedboverheadpress2.jpg?itok=QOvA4_4T" class="cover">
@@ -64,7 +64,7 @@
         <div class="features-rt">
             <h3>Social Fitness Network</h3>
             <br>
-            <p>Have the convenience of entering your strength training sessions directly into your fitbit ionic. Your logs are automatically submitted to the cloud after every session.</p>
+            <p>Share your results and ideas with other peers through a social fitness network. (feature coming soon)</p>
         </div>
     </div>
 </div>
