--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,24 +10,25 @@
   </head>
   <body>
     {{!-- <header>
-        <div class="logo"><img src="/images/group_strength_logo.png"></div>
-        <div class="nav">
-            <ul>
-                <li><a href="#features">Features</a></li>
-                <li><a href="#rtn-container">Workouts</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Contact</a></li>
-            </ul>
-        </div>
-    </header> --}}
+      <div class="logo"><img src="/images/group_strength_logo.png"></div>
+      <div class="nav">
+          <ul>
+              <li><a href="#features">Features</a></li>
+              <li><a href="#rtn-container">Workouts</a></li>
+              <li><a href="/results">Log</a></li>
+              <li><a href="#contact">Contact</a></li>
+          </ul>
+      </div> --}}
+    </header>
     {{{body}}}
-    <footer>
-        <ul>
+    <footer id="footer">
+      <p>Group Strength  &nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp;  3400 Stratford Rd NE, Atlanta, GA 30326  &nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp; 678-827-6381</p>
+        {{!-- <ul>
             <li><a>Contact</a></li>
             <li><a>FAQ</a></li>
             <li><a>Privacy</a></li>
             <li><a>Terms of Use</a></li>
-        </ul>
+        </ul> --}}
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="/javascripts/main.js"></script>
