--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -70,7 +70,7 @@ header {
 }
 
 #features h2 {
-  font-size: 2.5em;
+  font-size: 2.2em;
   text-align: center;
   padding-bottom: 50px;
 }
@@ -88,12 +88,12 @@ header {
 }
 
 .features-rt {
-  width: 17%;
+  width: 20%;
   text-align: left;
 }
 
 .features-lt {
-  width: 17%;
+  width: 20%;
   text-align: right;
 }
 
@@ -119,8 +119,9 @@ header {
 }
 
 #rtn-wrapper h2 {
-  padding: 25px;
+  padding: 65px;
   text-align: center;
+  font-size: 2em;
 }
 
 #rtn-container {
@@ -148,7 +149,7 @@ header {
   color: white;
 }
 
-footer {
+#footer {
   background-color: #24292e;
   display: flex;
   flex-wrap: wrap;
@@ -157,17 +158,23 @@ footer {
   height: 100px;
 }
 
-footer ul {
+#footer ul {
   display: flex;
   list-style-type: none;
 }
 
-footer a {
+#footer a {
   display: block;
   color: white;
   font-size: 1.2em;
   margin: 30px;
   text-decoration: none;
+}
+
+#footer p {
+  color: #f3f3f3;
+  font-size: 1em;
+  margin: 30px;
 }
 
 .center {
