--- a/views/routines.hbs
+++ b/views/routines.hbs
@@ -1,11 +1,8 @@
 <header>
-    <div class="logo"><img src="/images/group_strength_logo.png"></div>
+    <div class="logo"><a href="/"><img src="/images/group_strength_logo.png"></a></div>
     <div class="nav">
         <ul>
-            <li><a href="#features">Features</a></li>
-            <li><a href="#rtn-container">Workouts</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="/results">Log</a></li>
         </ul>
     </div>
 </header>
