--- a/views/routinesEdit.hbs
+++ b/views/routinesEdit.hbs
@@ -1,11 +1,8 @@
 <header>
-    <div class="logo"><img src="/images/group_strength_logo.png"></div>
+    <div class="logo"><a href="/"><img src="/images/group_strength_logo.png"></a></div>
     <div class="nav">
         <ul>
-            <li><a href="#features">Features</a></li>
-            <li><a href="#rtn-container">Workouts</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="/results">Log</a></li>
         </ul>
     </div>
 </header>
@@ -18,16 +15,16 @@
         </form>
     {{else}}
         <form action="/routines/{{rntResults.routineId}}/active/edit" method="POST" target="_blank">
-            <input type="checkbox" name="active" value="true">
+            Active: &nbsp;<input type="checkbox" name="active" value="true">
         </form>
     {{/if}}
     <br><br>
     {{#each rntResults.exercises}}
     <form action="/routines/{{../rntResults.routineId}}/{{exerciseId}}/edit" method="POST" target="_blank">
-        Exercise: &nbsp;&nbsp;<input type="text" name="exercise" value="{{exerciseName}}">&nbsp;&nbsp;&nbsp;
-        Weight:  &nbsp;&nbsp;<input type="text" name="weight" value="{{weight}}">&nbsp;&nbsp;&nbsp;
-        Reps:  &nbsp;&nbsp;<input type="text" name="reps" value="{{reps}}">&nbsp;&nbsp;&nbsp;
-        Sets:  &nbsp;&nbsp;<input type="text" name="sets" value="{{sets}}">&nbsp;&nbsp;&nbsp;
+        Exercise: &nbsp;&nbsp;<input type="text" name="exercise" value="{{exerciseName}}" readonly>&nbsp;&nbsp;&nbsp;
+        Weight:  &nbsp;&nbsp;<input type="number" min="0" max="99999"name="weight" value="{{weight}}">&nbsp;&nbsp;&nbsp;
+        Reps:  &nbsp;&nbsp;<input type="number" min="0" max="50" name="reps" value="{{reps}}">&nbsp;&nbsp;&nbsp;
+        Sets:  &nbsp;&nbsp;<input type="number" min="0" max="10" name="sets" value="{{sets}}">&nbsp;&nbsp;&nbsp;
         <br><br>
     </form>
     {{/each}}
