--- a/views/results.hbs
+++ b/views/results.hbs
@@ -9,4 +9,10 @@
 {{#each actuals}}
     <p>{{exerciseId}} {{actualReps}}</p>    
 {{/each}}
+
+<script>
+    let actuals = {{{actualsStr}}};
+    let workouts = {{{workoutStr}}};
+    let exercises = {{{exerciseStr}}}
+</script>
     
