--- a/views/results.hbs
+++ b/views/results.hbs
@@ -5,10 +5,342 @@
         </ul>
     </div>
 </header>
-<h1>Results View!!!</h1>
-{{#each actuals}}
-    <p>{{exerciseId}} {{actualReps}}</p>    
-{{/each}}
+<div class="results-container">
+    <div class="results-exercises">
+            <table>
+                <tr>
+                    <th scope="col"><h3>Basic Strength  &nbsp;&nbsp;-  &nbsp;&nbsp;3/7/2018</h3></th>
+                </tr>
+            </table>
+            <br>
+            <table>
+                <tr>
+                    <th scope="col" style="padding-right: 150px;">Exercise</th>
+                    <th scope="col">Weight</th>
+                    <th scope="col">Reps</th>
+                    <th scope="col">Set #</th>
+                </tr>
+                <tr>
+                    <td>Squats</td>
+                    <td>100</td>
+                    <td>12</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>100</td>
+                    <td>12</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>Bench Press</td>
+                    <td>50</td>
+                    <td>12</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>50</td>
+                    <td>12</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>Leg Extension</td>
+                    <td>70</td>
+                    <td>12</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>70</td>
+                    <td>12</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>Seated Row</td>
+                    <td>50</td>
+                    <td>12</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>50</td>
+                    <td>12</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>Leg Curl</td>
+                    <td>45</td>
+                    <td>12</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>45</td>
+                    <td>12</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>Lateral Raise</td>
+                    <td>7</td>
+                    <td>12</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>7</td>
+                    <td>12</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>Bicycle Crunch</td>
+                    <td>0</td>
+                    <td>20</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>0</td>
+                    <td>20</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>Bird Dog</td>
+                    <td>0</td>
+                    <td>20</td>
+                    <td>1</td>  
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>0</td>
+                    <td>20</td>
+                    <td>2</td>  
+                </tr>
+            </table>
+            <br><br><br><br>
+            <table>
+                <tr>
+                    <th scope="col"><h3>Basic Strength  &nbsp;&nbsp;-  &nbsp;&nbsp;3/5/2018</h3></th>
+                </tr>
+            </table>
+            <br>
+            <table>
+                <tr>
+                    <th scope="col" style="padding-right: 150px;">Exercise</th>
+                    <th scope="col">Weight</th>
+                    <th scope="col">Reps</th>
+                    <th scope="col">Set #</th>
+                </tr>
+                <tr>
+                    <td>Squats</td>
+                    <td>100</td>
+                    <td>12</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>100</td>
+                    <td>12</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>Bench Press</td>
+                    <td>50</td>
+                    <td>12</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>50</td>
+                    <td>12</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>Leg Extension</td>
+                    <td>70</td>
+                    <td>12</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>70</td>
+                    <td>12</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>Seated Row</td>
+                    <td>50</td>
+                    <td>12</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>50</td>
+                    <td>12</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>Leg Curl</td>
+                    <td>45</td>
+                    <td>12</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>45</td>
+                    <td>12</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>Lateral Raise</td>
+                    <td>7</td>
+                    <td>12</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>7</td>
+                    <td>12</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>Bicycle Crunch</td>
+                    <td>0</td>
+                    <td>20</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>0</td>
+                    <td>20</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>Bird Dog</td>
+                    <td>0</td>
+                    <td>20</td>
+                    <td>1</td>  
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>0</td>
+                    <td>20</td>
+                    <td>2</td>  
+                </tr>
+            </table>
+            <br><br><br><br>
+            <table>
+                <tr>
+                    <th scope="col"><h3>Basic Strength  &nbsp;&nbsp;-  &nbsp;&nbsp;3/2/2018</h3></th>
+                </tr>
+            </table>
+            <br>
+            <table>
+                <tr>
+                    <th scope="col" style="padding-right: 150px;">Exercise</th>
+                    <th scope="col">Weight</th>
+                    <th scope="col">Reps</th>
+                    <th scope="col">Set #</th>
+                </tr>
+                <tr>
+                    <td>Squats</td>
+                    <td>100</td>
+                    <td>12</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>100</td>
+                    <td>12</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>Bench Press</td>
+                    <td>50</td>
+                    <td>12</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>50</td>
+                    <td>12</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>Leg Extension</td>
+                    <td>70</td>
+                    <td>12</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>70</td>
+                    <td>12</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>Seated Row</td>
+                    <td>50</td>
+                    <td>12</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>50</td>
+                    <td>12</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>Leg Curl</td>
+                    <td>45</td>
+                    <td>12</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>45</td>
+                    <td>12</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>Lateral Raise</td>
+                    <td>7</td>
+                    <td>12</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>7</td>
+                    <td>12</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>Bicycle Crunch</td>
+                    <td>0</td>
+                    <td>20</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>0</td>
+                    <td>20</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>Bird Dog</td>
+                    <td>0</td>
+                    <td>20</td>
+                    <td>1</td>  
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>0</td>
+                    <td>20</td>
+                    <td>2</td>  
+                </tr>
+            </table>
+    </div>
+</div>
 
 <script>
     let actuals = {{{actualsStr}}};
