--- a/views/routinesEdit.hbs
+++ b/views/routinesEdit.hbs
@@ -8,7 +8,7 @@
 </header>
 <div class="routines-edit-container">
     <h1>{{rntResults.routineName}}</h1>
-    {{!-- <br><br>
+    <br><br>
     {{#if rntResults.active}}
         <form action="/routines/{{rntResults.routineId}}/active/edit" method="POST" target="_blank">
             Active: &nbsp;<input type="checkbox" name="active" value="true" checked="checked">
@@ -17,14 +17,14 @@
         <form action="/routines/{{rntResults.routineId}}/active/edit" method="POST" target="_blank">
             Active: &nbsp;<input type="checkbox" name="active" value="true">
         </form>
-    {{/if}} --}}
+    {{/if}}
     <br><br>
     {{#each rntResults.exercises}}
     <form action="/routines/{{../rntResults.routineId}}/{{exerciseId}}/edit" method="POST" target="_blank">
         Exercise: &nbsp;&nbsp;<input type="text" name="exercise" value="{{exerciseName}}" readonly>&nbsp;&nbsp;&nbsp;
-        Weight:  &nbsp;&nbsp;<input required type="number" min="0" max="99999"name="weight" value="{{weight}}">&nbsp;&nbsp;&nbsp;
-        Reps:  &nbsp;&nbsp;<input required type="number" min="0" max="50" name="reps" value="{{reps}}">&nbsp;&nbsp;&nbsp;
-        Sets:  &nbsp;&nbsp;<input required type="number" min="0" max="10" name="sets" value="{{sets}}">&nbsp;&nbsp;&nbsp;
+        Weight:  &nbsp;&nbsp;<input required type="number" min="0" max="99999"name="weight" value="{{weight}}" data-edits="editVals">&nbsp;&nbsp;&nbsp;
+        Reps:  &nbsp;&nbsp;<input required type="number" min="0" max="50" name="reps" value="{{reps}}" data-edits="editVals">&nbsp;&nbsp;&nbsp;
+        Sets:  &nbsp;&nbsp;<input required type="number" min="0" max="10" name="sets" value="{{sets}}" data-edits="editVals">&nbsp;&nbsp;&nbsp;
         <br><br>
     </form>
     {{/each}}
